--- a/styles/global.css
+++ b/styles/global.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Recursive:wght,CRSV,MONO@300..800,0,1&display=swap');
 
 :root {
-  --gray-50: #F7FAFC;
+  --gray-50:  #F7FAFC;
   --gray-100: #EDF2F7;
   --gray-200: #E2E8F0;
   --gray-300: #CBD5E0;
@@ -13,7 +13,7 @@
   --gray-800: #1A202C;
   --gray-900: #171923;
 
-  --blue-50: #EBF8FF;
+  --blue-50:  #EBF8FF;
   --blue-100: #BEE3F8;
   --blue-200: #90CDF4;
   --blue-300: #63B3ED;
@@ -47,6 +47,7 @@ code,
   body {
     background-color: var(--gray-50);
   }
+
   .code {
     border-radius: 5px;
     background-color: var(--gray-100);
@@ -101,19 +102,18 @@ code,
     border-radius: 10px;
   }
 
-  /*  */
 
   .dark-mode * {
-    scrollbar-color: rgb(65, 65, 65) transparent;
+    scrollbar-color: var(--gray-600) transparent;
   }
 
   .dark-mode *::-webkit-scrollbar-thumb {
-    background-color: rgb(65, 65, 65);
+    background-color: var(--gray-600);
   }
 
   .dark-mode pre,
   .dark-mode .code {
-    background-color: var(--dm-sidebar-bg-color);
+    background-color: var(--gray-800);
   }
 
   .check-icon {
@@ -123,22 +123,21 @@ code,
 
   .sidebar-link {
     padding: 5px 5px 5px 15px;
-    color: black;
+    color: var(--gray-900);
   }
   
   .part-items .sidebar-link {
-    padding: 0 5px 0 20px;
+    padding: 0 5px 5px 25px;
   }
 
   .sidebar {
     border: none;
-    /* background-color: var(--lm-base-body-bg-color); */
     background-color: var(--gray-50);
     font-weight: 400;
   }
 
   .dark-mode .sidebar {
-    /* background-color: var(--dm-base-body-bg-color); */
+    background-color: var(--gray-700);
   }
 
   kbd {
@@ -153,12 +152,12 @@ code,
 
   .dark-mode p code,
   .dark-mode li code {
-    background-color: var(--dm-sidebar-bg-color);
+    background-color: var(--gray-800);
   }
 
   pre,
   .code.dark {
-    background-color: var(--dm-sidebar-bg-color);
+    background-color: var(--gray-800);
     color: var(--dm-code-text-color);
   }
 
@@ -182,12 +181,11 @@ code,
 
   .navbar {
     border: none;
-    /* box-shadow: 0px 0px 25px -12px rgba(0, 0, 0, 0.3); */
-    background-color: var(--gray-200);
+    background-color: var(--gray-50);
   }
 
   .dark-mode .navbar {
-    /* box-shadow: 0px 0px 25px -12px rgb(0, 0, 0, 0.8); */
+    background-color: var(--gray-700);
   }
 
   .main-content ul > li {
@@ -371,12 +369,24 @@ code,
     background-color: var(--gray-100);
   }
 
+  .dark-mode .custom-table th {
+    background-color: var(--gray-600);
+  }
+
   .custom-table thead tr {
     border-bottom: 1px solid var(--gray-200);
   }
 
+  .dark-mode .custom-table thead tr {
+    border-bottom: 1px solid var(--gray-500);
+  }
+
   .custom-table tbody tr:not(:last-child){
     border-bottom: 1px solid var(--gray-200);
+  }
+
+  .dark-mode .custom-table tbody tr:not(:last-child){
+    border-bottom: 1px solid var(--gray-600);
   }
 
   .custom-table td[align='left'],
@@ -448,7 +458,7 @@ code,
   }
 
   .dark-mode .code-header {
-    background-color: var(--dm-navbar-bg-color);
+    background-color: var(--gray-900);
   }
 
   .code-header + .code-body .code {
@@ -475,7 +485,7 @@ code,
   }
 
   .dark-mode .main-content a:hover {
-    color: var(--primary-color);
+    color: var(--gray-50);
     text-decoration: underline;
   }
 
@@ -504,13 +514,14 @@ code,
 
   .dark-mode .next-page,
   .dark-mode .prev-page {
-    border: 1px solid var(--dm-horizontal-rule-color);
-    background-color: var(--dm-button-bg-color);
+    border: 1px solid var(--gray-700);
+    background-color: var(--gray-600);
+    color: var(--gray-300)!important;
   }
 
   .next-page:hover,
   .prev-page:hover {
-    border: 1px solid var(--primary-color);
+    border: 1px solid var(--gray-500);
   }
 
   /* Progress bar */
@@ -556,13 +567,8 @@ code,
   }
 
   .sidebar-section {
-    width: 100%;
-    /* border-bottom: 1px solid var(--lm-horizontal-rule-color); */
+    width: 98%;
     margin-bottom: 2px;
-  }
-
-  .dark-mode .sidebar-section {
-    /* border-color: var(--dm-horizontal-rule-color); */
   }
 
   .sidebar-title {
@@ -599,12 +605,12 @@ code,
   }
   
   .dark-mode .content-wrapper {
-    background-color: var(--dm-base-body-bg-color);
+    background-color: var(--gray-700);
   }
 
   .dark-mode .open,
   .dark-mode .current.open:hover {
-    background-color: var(--dm-base-body-bg-color);
+    background-color: var(--gray-600);
   }
 
   .open,
@@ -658,8 +664,17 @@ code,
     border-color: var(--gray-200);
   }
 
+  .dark-mode .collapse-panel[open] .collapse-header {
+    background-color: var(--gray-500);
+    border-color: var(--gray-600);
+  }
+
   details p:nth-child(2){
     border-color: var(--gray-200);
+  }
+
+  .dark-mode details p:nth-child(2){
+    border-color: var(--gray-600);
   }
 
   .collapse-header:not(.without-arrow),
@@ -670,18 +685,30 @@ code,
     border-color: var(--gray-200);
   }
 
+  .dark-mode .collapse-header:not(.without-arrow),
+  .dark-mode .collapse-header,
+  .dark-mode .collapse-panel[open] .collapse-header:focus,
+  .dark-mode .card {
+    background-color: var(--gray-800);
+    border-color: var(--gray-600);
+  }
+
   .btn {
     background-color: var(--gray-100);
     border-color: var(--gray-300);
   }
 
-  .btn:hover {
-    background-color: var(--gray-200);
-  }
-
+  .btn:hover,
   .btn.active, .btn:focus,
   .btn.active:focus {
     background-color: var(--gray-200);
+  }
+
+  .dark-mode .btn:hover,
+  .dark-mode .btn.active, 
+  .dark-mode .btn:focus,
+  .dark-mode .btn.active:focus {
+    background-color: var(--gray-500);
   }
 
   kbd {
