--- a/styles/global.css
+++ b/styles/global.css
@@ -42,7 +42,6 @@ code,
 }
 
 @media screen {
-
   body {
     background-color: var(--gray-50);
   }
@@ -132,8 +131,6 @@ code,
     border: none;
     background-color: var(--gray-50);
     font-weight: 400;
-    position: sticky;
-    top: 50px;
   }
 
   .dark-mode .sidebar {
@@ -714,5 +711,25 @@ code,
   kbd {
     background-color: var(--gray-100);
     border-color: var(--gray-300);
+  }
+
+  .sticky {
+    position: sticky;
+    top: 0px;
+  }
+
+  .container-xxl {
+    width: 100%;
+    padding-right: var(--bs-gutter-x, 0.75rem);
+    padding-left: var(--bs-gutter-x, 0.75rem);
+    margin-right: auto;
+    margin-left: auto;
+    width: var(--container-width);
+  }
+
+  @media (min-width: 1400px) {
+    .container-xxl {
+      max-width: 1320px;
+    }
   }
 }
