--- a/styles/global.css
+++ b/styles/global.css
@@ -39,16 +39,12 @@ code,
   font-family: 'Recursive', 'SF Mono', 'Menlo', 'Cascadia Code', 'Consolas',
     'Bitsream Vera Sans Mono', 'Droid Sans Mono', 'Ubuntu Mono', monospace;
   font-size: 1.5rem;
+  border-radius: 5px;
 }
 
 @media screen {
   body {
     background-color: var(--gray-50);
-  }
-
-  .code {
-    border-radius: 5px;
-    background-color: var(--gray-100);
   }
 
   code.inline {
@@ -60,6 +56,7 @@ code,
   pre.code {
     margin: 0;
     padding: 10px 0;
+    background-color: var(--gray-100);
     border: 1px solid var(--gray-100);
   }
 
@@ -152,10 +149,8 @@ code,
     background-color: var(--gray-800);
   }
 
-  pre,
-  .code.dark {
+  pre .code.dark {
     background-color: var(--gray-800);
-    color: var(--dm-code-text-color);
   }
 
   .code {
