--- a/styles/app.css
+++ b/styles/app.css
@@ -66,3 +66,7 @@ li p {
 .summary p {
   display: inline;
 }
+
+pre {
+  @apply scrollbar scrollbar-thumb-gray-300 scrollbar-track-gray-200 dark:scrollbar-thumb-gray-600 dark:scrollbar-track-gray-800;
+}
