--- a/styles/app.css
+++ b/styles/app.css
@@ -68,5 +68,5 @@ li p {
 }
 
 pre {
-  @apply scrollbar scrollbar-thumb-gray-300 scrollbar-track-gray-200 dark:scrollbar-thumb-gray-600 dark:scrollbar-track-gray-800;
+  @apply scrollbar-thin scrollbar-thumb-gray-300 scrollbar-track-gray-200 dark:scrollbar-thumb-gray-600 dark:scrollbar-track-gray-800;
 }
