Custom scrollbars only on Windows, antialiasing only for dark mode.

--- a/styles/app.css
+++ b/styles/app.css
@@ -67,6 +67,7 @@ li p {
   display: inline;
 }
 
-pre {
-  @apply scrollbar-thin scrollbar-thumb-gray-300 scrollbar-track-gray-200 dark:scrollbar-thumb-gray-600 dark:scrollbar-track-gray-800;
+.dark body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
