--- a/styles/print.css
+++ b/styles/print.css
@@ -5,6 +5,8 @@
     color: black;
     font-size: 13pt;
     line-height: 1.6em;
+    background-color: #fff;
+    color: #000 !important;
   }
 
   kbd,
@@ -16,6 +18,7 @@
     page-break-inside: avoid;
   }
 
+
   li > p {
     padding: 0;
     margin: 0;
@@ -24,6 +27,7 @@
   .no-print,
   .progressBarContainer,
   .navbar,
+  header,
   .sidebar-overlay,
   .sidebar,
   .link-to-heading,
@@ -48,6 +52,7 @@
     border: 1px solid black;
     padding: 4px;
     page-break-inside: avoid;
+    color: #000 !important;
   }
 
   .code * {
@@ -61,6 +66,7 @@
     border: 1px solid lightgrey;
     padding: 1em;
     overflow: visible;
+    color: #000 !important;
   }
 
   .hint,
@@ -68,21 +74,6 @@
   .error {
     font-style: italic;
     page-break-inside: avoid;
-  }
-
-  .hint {
-    color: #272841;
-    border-color: #272841;
-  }
-
-  .warn {
-    color: #673e00;
-    border-color: #673e00;
-  }
-
-  .error {
-    color: #670024;
-    border-color: #670024;
   }
 
   blockquote {
